# achievement-tools

./: .gitignore  .pre-commit-config.yaml  README.md  achievement_history.py  achievement_tools.py  app_id_db.py  makefile  mass_effect.csv  mass_effect.py  pyproject.toml  requirements.txt  steam_api_tools.py  visualization_mass_effect.py
example/mass_effect/: mass_effect.csv  mass_effect.py  visualization_mass_effect.py
tests/: test_steam_api_tools.py
