[tool.poetry]
name = "achievement-tools"
version = "0.1.0"
description = "Tools to analyze steam achievements"
authors = ["Clemens Fiedler <clemens.mb.fiedler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
apscheduler = "^3.10.4"
lxml = "^5.2.2"
statsmodels = "^0.14.2"
seaborn = "^0.13.2"
plotly = "^5.23.0"
numpy = "^2.0.1"
requests = "^2.32.3"
polars = "^1.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pre-commit = "^3.7.1"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
